<resources>
    <string name="app_name">tEncrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="history">History</string>
    <string name="set">Set</string>
    <string name="template">Template</string>
    <string name="enter_neccessaru_fields">Please Enter text and Select an Image</string>
    <string name="enter_text_data">Please Enter a text to Encrypt</string>
    <string name="image_ecrypt">Please Select an Image to Encrypt</string>
    <string name="encrypt_done">Encryption Done %s</string>
    <string name="share">Share</string>
    <string name="decryption">Decryption</string>
    <string name="selected_image">selected image</string>
</resources>